k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: barkuni
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: flask-app
